bin/xserver/src/bottom_pane/snapshots/chaos_xserver__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_cycle_without_context.snap
---
source: bin/xserver/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                            "
"› Ask Codex to do anything                  "
"                                            "
"                                            "
"                                            "
"                                            "
"                                            "
"                                            "
"  Plan mode (shift+tab to cycle)            "
