bin/xserver/src/bottom_pane/snapshots/chaos_xserver__bottom_pane__chat_composer__tests__footer_collapse_queue_full.snap
---
source: bin/xserver/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                                        "
"› Test                                                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  tab to queue message                                                                                98% context left  "
